--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -22,7 +22,7 @@
     <tbody>
         @if (Model != null && Model.Count > 0)
         {
-            int index = 1;
+            int index = ((ViewBag.CurrentPage - 1) * 10) + 1; // Sayfa numarasıyla index hesaplama
             @foreach (var user in Model)
             {
                 <tr>
@@ -46,3 +46,17 @@
         }
     </tbody>
 </table>
+
+@if (ViewBag.TotalPages > 1)
+{
+    <nav>
+        <ul class="pagination justify-content-center">
+            @for (int i = 1; i <= ViewBag.TotalPages; i++)
+            {
+                <li class="page-item @(ViewBag.CurrentPage == i ? "active" : "")">
+                    <a class="page-link" href="@Url.Action("Index", new { page = i })">@i</a>
+                </li>
+            }
+        </ul>
+    </nav>
+}
