--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using CAFE_MENU.Extensions
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -9,6 +10,13 @@
     <link rel="stylesheet" href="~/CAFE_MENU.styles.css" asp-append-version="true" />
 </head>
 <body>
+    @if (TempData["Message"] != null)
+    {
+        <div class="alert alert-success" role="alert">
+            @TempData["Message"]
+        </div>
+    }
+
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -33,12 +41,26 @@
                                 <span class="navbar-text me-3">Hoşgeldin, @Context.Session.GetString("UserName")</span>
                             </li>
                         }
+
+                        <!-- Sepet Butonu -->
+                        <li class="nav-item">
+                            @{
+                                var cart = Context.Session.GetObject<List<int>>("Cart") ?? new List<int>();
+                                int cartCount = cart.Count;
+                            }
+                            <a class="btn btn-warning me-3" asp-area="" asp-controller="Cart" asp-action="Index">
+                                🛒 Sepet (@cartCount)
+                            </a>
+
+                        </li>
+
                         <li class="nav-item">
                             <form asp-area="" asp-controller="Login" asp-action="Logout" method="post" class="d-inline">
                                 <button type="submit" class="btn btn-danger">Çıkış Yap</button>
                             </form>
                         </li>
                     </ul>
+
 
                 </div>
             </div>
