--- a/Views/Property/AddProperty.cshtml
+++ b/Views/Property/AddProperty.cshtml
@@ -1,20 +1,20 @@
 ﻿@model CAFE_MENU.Models.Property
 @{
-    ViewData["Title"] = "Yeni Özellik Ekle";
+    ViewData["Title"] = "AddProperty";
     Layout = "_AdminLayout";
 }
 
-<h2>Yeni Özellik Ekle</h2>
+<h2>Add Property</h2>
 
 <form asp-action="AddProperty" method="post">
     <div class="form-group">
-        <label>Anahtar</label>
+        <label>Key</label>
         <input asp-for="Key" class="form-control" required />
     </div>
     <div class="form-group">
-        <label>Değer</label>
+        <label>Value</label>
         <input asp-for="Value" class="form-control" required />
     </div>
-    <button type="submit" class="btn btn-success">Kaydet</button>
-    <a href="@Url.Action("Index", "Property")" class="btn btn-secondary">İptal</a>
+    <button type="submit" class="btn btn-success">Save</button>
+    <a href="@Url.Action("Index", "Property")" class="btn btn-secondary">Cancel</a>
 </form>
