--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -20,28 +20,28 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Kullanıcılar</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Ürünler</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Kategoriler</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Categories</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Property" asp-action="Index">Ürün Özellikleri</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Property" asp-action="Index">Properties</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
                         @if (Context.Session.GetString("UserName") != null)
                         {
                             <li class="nav-item">
-                                <span class="navbar-text me-3">Hoşgeldin, @Context.Session.GetString("UserName")</span>
+                                <span class="navbar-text me-3">Welcome, @Context.Session.GetString("UserName")</span>
                             </li>
                         }
                         <li class="nav-item">
                             <form asp-area="" asp-controller="Login" asp-action="Logout" method="post" class="d-inline">
-                                <button type="submit" class="btn btn-danger">Çıkış Yap</button>
+                                <button type="submit" class="btn btn-danger">Logout</button>
                             </form>
                         </li>
                     </ul>
