--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -5,24 +5,24 @@
     ViewData["Title"] = "Users";
 }
 
-<h2>Kullanıcı Listesi</h2>
+<h2>Users</h2>
 
-<a href="@Url.Action("AddUser", "Users")" class="btn btn-primary">Yeni Kullanıcı Ekle</a>
+<a href="@Url.Action("AddUser", "Users")" class="btn btn-primary">Add New User</a>
 
 <table class="table table-striped mt-3">
     <thead>
         <tr>
             <th>#</th>
-            <th>Ad</th>
-            <th>Soyad</th>
-            <th>Kullanıcı Adı</th>
-            <th>İşlemler</th>
+            <th>Name</th>
+            <th>Surname</th>
+            <th>Username</th>
+            <th>Transactions</th>
         </tr>
     </thead>
     <tbody>
         @if (Model != null && Model.Count > 0)
         {
-            int index = ((ViewBag.CurrentPage - 1) * 10) + 1; // Sayfa numarasıyla index hesaplama
+            int index = ((ViewBag.CurrentPage - 1) * 10) + 1;
             @foreach (var user in Model)
             {
                 <tr>
@@ -31,8 +31,8 @@
                     <td>@user.LastName</td>
                     <td>@user.UserName</td>
                     <td>
-                        <a href="@Url.Action("UpdateUser", "Users", new { id = user.UserId })" class="btn btn-warning btn-sm">Düzenle</a>
-                        <a href="@Url.Action("DeleteUser", "Users", new { id = user.UserId })" class="btn btn-danger btn-sm" onclick="return confirm('Bu kullanıcıyı silmek istediğinize emin misiniz?');">Sil</a>
+                        <a href="@Url.Action("UpdateUser", "User", new { id = user.UserId })" class="btn btn-warning btn-sm">Edit</a>
+                        <a href="@Url.Action("DeleteUser", "User", new { id = user.UserId })" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this user?');">Delete</a>
                     </td>
                 </tr>
                 index++;
@@ -41,7 +41,7 @@
         else
         {
             <tr>
-                <td colspan="5" class="text-center">Henüz kullanıcı eklenmemiş.</td>
+                <td colspan="5" class="text-center">No users have been added yet.</td>
             </tr>
         }
     </tbody>
