--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,6 +8,12 @@
 
 <h2>Home</h2>
 
+<!-- Search box -->
+<form asp-action="Index" method="get" class="mb-4">
+    <input type="text" name="searchTerm" value="@ViewBag.SearchTerm" placeholder="Search by product name..." class="form-control" />
+    <button type="submit" class="btn btn-primary mt-2">Search</button>
+</form>
+
 <div class="row">
     @foreach (var product in Model)
     {
@@ -27,5 +33,22 @@
                 </div>
             </div>
         </div>
+    }
+</div>
+
+<div class="pagination">
+    @if (ViewBag.CurrentPage > 1)
+    {
+        <a href="@Url.Action("Index", new { page = ViewBag.CurrentPage - 1, searchTerm = ViewBag.SearchTerm })">&laquo; Previous</a>
+    }
+
+    @for (var i = 1; i <= ViewBag.TotalPages; i++)
+    {
+        <a href="@Url.Action("Index", new { page = i, searchTerm = ViewBag.SearchTerm })" class="@(i == ViewBag.CurrentPage ? "active" : "")">@i</a>
+    }
+
+    @if (ViewBag.CurrentPage < ViewBag.TotalPages)
+    {
+        <a href="@Url.Action("Index", new { page = ViewBag.CurrentPage + 1, searchTerm = ViewBag.SearchTerm })">Next &raquo;</a>
     }
 </div>
