--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,7 +39,6 @@
                             </li>
                         }
 
-                        <!-- Sepet Butonu -->
                         <li class="nav-item">
                             @{
                                 var cart = Context.Session.GetObject<List<int>>("Cart") ?? new List<int>();
@@ -48,7 +47,12 @@
                             <a class="btn btn-warning me-3" asp-area="" asp-controller="Cart" asp-action="Index">
                                 🛒 Cart (@cartCount)
                             </a>
+                        </li>
 
+                        <li class="nav-item">
+                            <a class="btn btn-primary me-3" asp-area="" asp-controller="Order" asp-action="OrderHistory">
+                                My orders
+                            </a>
                         </li>
 
                         <li class="nav-item">
@@ -57,9 +61,8 @@
                             </form>
                         </li>
                     </ul>
-
-
                 </div>
+
             </div>
         </nav>
     </header>
