--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -42,7 +42,7 @@
                     <a href="@Url.Action("UpdateProduct", "Product", new { id = product.ProductId.ToString() })" class="btn btn-warning">Edit</a>
                     <form asp-action="DeleteProduct" asp-controller="Product" method="post" style="display:inline;">
                         <input type="hidden" name="id" value="@product.ProductId.ToString()" />
-                        <button type="submit" class="btn btn-danger" onclick="return confirm('Bu ürünü silmek istediğinize emin misiniz?');">Delete</button>
+                        <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this product?');">Delete</button>
                     </form>
                 </td>
             </tr>
